--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,8 @@
-<p>
-  header works!
-</p>
+<div class="header-container">
+  <div class="header-wrapper no-location" [class.hidden]="isLocationSet()">
+    <div class="title">{{ title }}</div>
+  </div>
+  <div class="header-wrapper" [class.hidden]="!isLocationSet()">
+    <h1>Yes location</h1>
+  </div>
+</div>
