--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,7 @@
 <div class="footer-container">
-  <div class="footer-wrapper">Menu</div>
+  <div class="footer-wrapper">
+    <div>Menu</div>
+    <div>{{ name }}</div>
+    <div>Settings</div>
+  </div>
 </div>
