--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
     margin: 67px 0;
+    height: calc(100vh - 134px);
 }
 
 .hidden {
