--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,6 +1,5 @@
 .footer-container {
     display: flex;
-    justify-content: space-between;
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -8,9 +7,11 @@
     border-top: 1px solid black;
 
     .footer-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
         width: 100%;
         height: 100%;
-        padding: 20px;
         text-align: center;
     }
 }
