--- a/src/app/views/locations/locations.component.html
+++ b/src/app/views/locations/locations.component.html
@@ -1,6 +1,7 @@
 <div class="locations-container">
   <div *ngFor="let animal of location.zoo.animals" class="animal-container">
-    <div class="animal-name">Name: {{ animal.name }}</div>
-    <div class="animal-type">Type: {{ animal.type }}</div>
+    <div class="animal-data">Name: {{ animal.name }}</div>
+    <div class="animal-data">Type: {{ animal.type }}</div>
+    <div class="animal-data">Count: {{ animal.count }}</div>
   </div>
 </div>
