--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
     <div class="title">{{ title }}</div>
   </div>
   <div class="header-wrapper" *ngIf="isLocationSet()">
-    <div class="cash">{{ location.money | currency }}</div>
+    <div class="cash">{{ money | currency }}</div>
     <div class="title">{{ location.name }}</div>
     <div class="time">10:00 A.M.</div>
   </div>
