--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@ body {
     font-size: 16px;
     margin: 67px 0;
     height: calc(100vh - 134px);
+    background-color: lightgrey;
 }
 
 .hidden {
